--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shadcn-vue-landing-page",
+  "name": "unlimited-analytics-landing-page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
