--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           provider: github
-          github-token: ${{ secrets.DEPLOY_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           target: main
           ref: main
           path: dist
