--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm run build
 
       - name: Deploy site
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: actions/deploy-pages@v4
         with:
           ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: landing-page 
