--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -21,9 +21,15 @@ jobs:
       - name: Build site
         run: npm run build
 
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: dist
+
       - name: Deploy site
         uses: actions/deploy-pages@v4
         with:
           ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: landing-page 
+          BRANCH: landing-page
           FOLDER: dist
