--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -21,6 +21,9 @@ jobs:
 
       - name: Build site
         run: npm run build
+      
+      - name: Remove symlinks in dist
+        run: find dist -type l -exec rm -f {} \;
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
